# greener-noise

./: README.md  even_greener_noise.py  green_noise_enhanced_v3.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: CODE_IMPROVEMENT_PLAN.md  SCREENSHOTS.md  THEMING.md  UI_IMPROVEMENT_PLAN.md
src/green_noise/: audio.py  cli.py  config.py  core.py  gui.py  plotting.py  presets.py  themes.py
tests/: test_audio.py  test_config.py  test_core.py
